# Unscented-Orientation-Filter

./: .gitignore  06-Sep-2020 16:30:24_gyro.csv  06-Sep-2020 16:30:25_errorQuats.csv  06-Sep-2020 16:30:25_ideal.csv  06-Sep-2020 16:30:25_mag.csv  CMakeLists.txt  Makefile  README  README.md  attitudeMatrix.m  conjQuat.m  crossCorr.m  crossCorr2.m  crossMatrix.m  description.txt  filterStep.cpp  filterStep.h  filter_step.h  gyroIntegrate.m  idealPath.m  initializeFilter.m~  innovationCov.m  innovationCov.m~  innovationCov2.m  invQuat.m  kalmanArrayInv.m  kalmanArrayMult.m  kalmanArrayMult2.m  kalmanTest.m  kalmanTest.m~  multQuat.m  newChis.m  predictError.m  predictError2.m  predictMeas.m  predictMeas2.m  processNoise.m  quatPropagate.m  quatRotate.m  quatTest2.m  (+17 more)
JNI_CPP_Reference/: .gitignore  Main.java  Makefile  README  USQUE.java  constants.hpp  filter_step  filter_step.cpp  filterstep.cpp  imu_params.txt  json_test.cpp  setParam.cpp  write_params.cpp
Matlab_Reference/: README.md  conjQuat.m  gyroIntegrate.m  kalmanArrayMult.m  kalmanArrayMult.prj  multQuat.m  predictMeas.m  quatPropagate.m  quatUpdate.m  readGyro.m  readMag.m  readWMM.m  sigmaMeas.m  sigmaOmegas.m  testFilter.m  updateError.m
src/simulation/: CMakeLists.txt  meas.cpp  meas.hpp  simulation.cpp  simulation.hpp  utils.cpp  utils.hpp
src/testbenches/: CMakeLists.txt  Makefile  testbench-imu.cpp  testbench-sim.cpp
src/testbenches/test/: testbench
src/usque/: CMakeLists.txt  filterStep.cpp  filterStep.h  meas.cpp  meas.hpp  runFilter.cpp  runFilter.h  sim_utils.cpp  usque.cpp  usque.h  usque.hpp
src/usque/functions/: attitudeMatrix.cpp  crossCorr.cpp  filterStep.cpp  innovationCov.cpp  kalmanArrayMult.cpp  newChis.cpp  predictError.cpp  predictMeas.cpp  quatPropagate.cpp  quatUpdate.cpp  sigmaMeas.cpp  sigmaOmegas.cpp  sigmaQuats.cpp  usque.hpp
tests/: CMakeLists.txt  example.cpp  idealGyroVals.cpp
